# vit_pruning

./: .gitignore  EXPERIMENT_LOG.md  README.md  pyproject.toml
configs/: experiment.yaml
core/: __init__.py  evaluator.py  model_loader.py  pruner.py  quantizer.py  utils.py
docs/: PIPELINE.md  SETUP.md
latex/: paper.tex  refs.bib
scripts/: ._analyze_results.py  analyze_results.py  benchmark.py  prune_experiment.py
