[project]
name = "vit-pruning-ptq"
version = "0.1.0"
description = "Structured Pruning + PTQ for Lightweight ViT on Edge Devices"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "transformers",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "thop",
    "fvcore",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "einops",
    "jupyter",
    "tqdm>=4.65",
    "tensorboard>=2.14",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
